0.06  07-09-2011
    - Add [Clear] and [Cancel] to AddressBook  maint window
    - Spellchecking

0.05  25-03-2011
    - Fixed WriteWAPSetting, ActivateWapSetting, WriteWapBookmark,
      and DeleteWapBookmark
    - Enable descending depth to dirtree ()
    - Implemented GetDir ()
    - Fix buffer overflow (coding error)
    - Add Tk GUI to examples/dirtree (and a module for it)
    - Implemented GetFile ()
    - Add Safe, Show, and Preview functionality to examples/dirtree GUI
    - Add PhoneBook add/update functionality to examples/kgnokii-sms
    - Use libgnokii functions for memory types

0.04  10-02-2011
    - More info in GetDirTree
    - SendSMS now works as expected
    - Fixed WriteCalendarNote and CreateSMSFolder
    - Implemented WritePhonebookEntry, DeleteSMSFolder, and DeleteSMS
    - Basic range checks
    - Lots of code cleanup

0.03  02-02-2011
    - Make it into a more complete and robust distribution
    - More documentation
    - Support connect ({ verbose => 1 });
    - Finalized/Fixed a lot more Get methods from GSMD::Gnokii
    - Implemented GetDirTree ()
    - working examples in examples
      * kgnokii - send SMS. Can be use both from command line
                  and with Tk GUI
      * backup  - safe the basic phone settings in JSON
      * dirtree - show the complete file tree on phone

0.02  24-01-2011
    - Ongoing work-in-progress in converting all GSMD::Gnokii
      functionality. Also extending existing code, adding new
      methods and reformatting all code to mach my style  for
      easier reading and for better maintainability.

      This first phase is about all Get*** methods
    - First check-in in git

0.01  21-01-2011
    - Start analizing GSMD::Gnokii and finding why connection
      is failing.