@@ -2,7 +2,10 @@
 blib
 cover_db
 Makefile
+META.json
 META.yml
+MYMETA.json
+MYMETA.yml
 pm_to_blib
 GSM
 *.tar.gz
