@@ -7,6 +7,10 @@ cover_db/
 sandbox/
 Makefile
 MANIFEST.SKIP
+META.json
+META.yml
+MYMETA.json
+MYMETA.yml
 pm_to_blib
 \.tar
 \.tar\.gz
