@@ -1,6 +1,7 @@
 0.06  07-09-2011
     - Add [Clear] and [Cancel] to AddressBook  maint window
     - Spellchecking
+    - More cross-checks for META data
 
 0.05  25-03-2011
     - Fixed WriteWAPSetting, ActivateWapSetting, WriteWapBookmark,
